Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

SVN TRUNK

* Sampler channel and instrument file requester support for
  other than GIG instrument files (*gig *.dls) has been added,
  now also allowing for SFZ instrument files (*.sfz) loading.

* General standard dialog buttons layout is now in place.

* Initial widget geometry and visibility persistence logic has
  been slightly revised as much to avoid crash failures due to
  wrong main widget hidden state.

* General source tree layout and build configuration change.

* Automatic crash-dump reports, debugger stack-traces (gdb), back-
  traces, whatever, are being introduced as a brand new configure
  option (--enable-stacktrace) and default enabled on debug build
  targets (--enable-debug).

* Attempt to fix broken instrument list model/view on Qt >= 4.6.

* Device parameter spin-box default maximum has been set higher:
  now at a magic 24-bit limit (16777216) instead of older 16-bit
  (65536), possibly fixing bug #136.

* LADISH Level 1 support has been added: SIGUSR1 signal trap
  just makes it a shortcut to File/Save.

* MIDI Device Status menu is disabled when no MIDI device exists;
  a menu separator has been added.

* Window manager's close button was found missing from the Devices
  and Instruments widgets when on Qt >= 4.5, now fixed.

* MIDI activity indicator on channel strips and MIDI device status
  widgets is now implemented as a flashing green LED, instead of a
  lame green solid background :).

* Global configuration state is now explicitly saved/committed to
  disk when View/Options... dialog changes are accepted and applied.

* Czech (cs) translation added (by Pavel Fric).


0.2.2  2009-08-01  New release cycle.

* Russian (qsampler_ru.ts by Alexandre Prokoudine) makes it as
  brand first translation delivered. Thanks and welcomes whom
  ever may follow ;)

* Converted obsolete QMessageBox forms to standard buttons.
