@@ -474,9 +474,13 @@ void ChannelForm::openInstrumentFile (void)
 	// FIXME: the instrument file filters should be restricted,
 	// depending on the current engine.
 	QStringList filters;
-	filters << tr("GIG Instrument files") + " (*.gig *.dls)";
-	filters << tr("SFZ Instrument files") + " (*.sfz)";
-	filters << tr("SF2 Instrument files") + " (*.sf2)";
+	const QString& sEngineName = m_ui.EngineNameComboBox->currentText().toUpper();
+	if (sEngineName.contains("GIG"))
+		filters << tr("GIG Instrument files") + " (*.gig *.dls)";
+	if (sEngineName.contains("SFZ"))
+		filters << tr("SFZ Instrument files") + " (*.sfz)";
+	if (sEngineName.contains("SF2"))
+		filters << tr("SF2 Instrument files") + " (*.sf2)";
 	filters << tr("All files") + " (*.*)";
 	const QString& filter = filters.join(";;");
 
